--- a/sass/main.css
+++ b/sass/main.css
@@ -20,16 +20,65 @@ body {
 
 .all-box {
   background: #8A817C;
-  min-height: 5rem;
-  width: 100%;
   border: 3px solid #FFCD6B;
   border-radius: 30px;
-  margin: 7rem 2rem;
+  margin: auto 2rem;
 }
 .all-box .input-box {
   background: #F4F3EE;
-  min-height: 50px;
+  width: 75%;
   border-radius: 30px;
-  margin: 2rem 1rem;
+  margin: 2rem 0.6rem;
+  padding: 0.5rem 1rem;
   box-shadow: inset 0px 9px 23px -16px black;
+  font-family: "Saira", sans-serif;
+  font-weight: 700;
+  font-size: 1.4rem;
+}
+
+.four-wide {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  margin: 0 0.6rem;
+  margin-bottom: 2rem;
+}
+.four-wide img {
+  width: 50%;
+}
+
+.two-wide {
+  display: grid;
+  grid-template-columns: 1.5fr 1.5fr 1fr;
+  grid-template-rows: 1fr;
+  margin: 0 0.6rem;
+}
+.two-wide img {
+  width: 80%;
+}
+
+.button {
+  border-radius: 10px;
+  margin: 0.2rem;
+  padding: 0.3rem;
+  font-weight: 700;
+  font-size: 1.5rem;
+  transition: 0.4s opacity;
+  display: grid;
+  place-content: center;
+}
+.button:hover {
+  cursor: pointer;
+  opacity: 70%;
+}
+.button:active {
+  box-shadow: inset 0px 9px 15px -6px black;
+}
+
+.green {
+  background: #D3DDD0;
+}
+
+.orange {
+  background: #FFCD6B;
 }/*# sourceMappingURL=main.css.map */
