--- a/sass/_all-box.scss
+++ b/sass/_all-box.scss
@@ -1,29 +1,31 @@
-@use './variables' as vars;
+@use "./variables" as vars;
 
 @mixin all-box() {
+  .center-box {
+    display: flex;
+    text-align: center;
+    height: 100%;
+  }
 
-    .center-box{
-        display: flex;
-        text-align: center;
-        height: 100%;
+  .all-box {
+    background: vars.$calc-background;
+    border: 3px solid vars.$button-oragne;
+    border-radius: 30px;
+    margin: auto 2rem;
+    width: 100%;
+    padding: 0 .8rem;
+
+    .input-box {
+      background: vars.$input-background;
+      width: 100%;
+      border-radius: 30px;
+      margin: 2rem 0;
+      padding: 0.5rem 1rem;
+      box-shadow: inset 0px 9px 23px -16px rgba(0, 0, 0, 1);
+      font-family: vars.$font;
+      font-weight: vars.$bold;
+      font-size: 1.4rem;
+      box-sizing: border-box;
     }
-
-    .all-box{
-        background: vars.$calc-background;
-        border: 3px solid vars.$button-oragne;
-        border-radius: 30px;
-        margin: auto 2rem;
-
-        .input-box{
-            background: vars.$input-background;
-            width: 75%;
-            border-radius: 30px;
-            margin: 2rem .6rem;
-            padding: .5rem 1rem;
-            box-shadow: inset 0px 9px 23px -16px rgba(0, 0, 0, 1);
-            font-family: vars.$font;
-            font-weight: vars.$bold;
-            font-size: 1.4rem;
-        }
-    }
+  }
 }
