--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,10 @@ html{
     height: 100%;
 }
 
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
+
 body{
     margin: 0;
     background: vars.$site-background;
