--- a/sass/_all-box.scss
+++ b/sass/_all-box.scss
@@ -11,7 +11,7 @@
     background: vars.$calc-background;
     border: 3px solid vars.$button-oragne;
     border-radius: 30px;
-    margin: auto 2rem;
+    margin: auto 10%;
     width: 100%;
     padding: 0 .8rem;
 
